# bgfx

./: .gitignore  CMakeLists.txt
CMake/: RenderCore.cmake  RenderExample.cmake  RenderTools.cmake
CMake/RenderTools/: geometryc.cmake  geometryv.cmake  shaderc.cmake  texturec.cmake  texturev.cmake
Example/: CMakeLists.txt
Example/CMake/: RenderExample.cmake
Example/RenderExample/02-metaballs/: metaballs.cpp
Example/RenderExample/11-fontsdf/: fontsdf.cpp
Example/RenderExample/14-shadowvolumes/: shadowvolumes.cpp
Example/RenderExample/15-shadowmaps-simple/: shadowmaps_simple.cpp
Example/RenderExample/16-shadowmaps/: shadowmaps.cpp
Example/RenderExample/17-drawstress/: drawstress.cpp
Example/RenderExample/23-vectordisplay/: vectordisplay.h
Example/RenderExample/24-nbody/: nbody.cpp
Example/RenderExample/25-c99/: helloworld.c
Example/RenderExample/common/: bgfx_utils.cpp  bgfx_utils.h  cube_atlas.cpp  cube_atlas.h
Example/RenderExample/common/debugdraw/: debugdraw.cpp  debugdraw.h
Example/RenderExample/common/entry/: entry.cpp  entry_android.cpp  entry_glfw.cpp  entry_html5.cpp  entry_ios.mm  entry_osx.mm  entry_sdl.cpp  entry_windows.cpp  entry_winrt.cx  entry_x11.cpp
Example/RenderExample/common/font/: font_manager.cpp  font_manager.h  text_buffer_manager.cpp
Example/RenderExample/common/imgui/: imgui.cpp  imgui.h
Example/RenderExample/common/nanovg/: nanovg_bgfx.cpp  nanovg_bgfx.h
Example/RenderExample/common/ps/: particle_system.cpp
Include/Render/: bgfx_p.h  topology.h  vertexlayout.h
Src/Render/: bgfx.cpp  shader.cpp  shader_dx9bc.cpp  shader_dxbc.cpp  shader_spirv.cpp  vertexlayout.cpp
Src/RenderTools/: Bounds.cpp.in  GeometryCompiler.cpp  Shader.cpp.in  VertexLayout.cpp.in  shaderc_metal.cpp  shaderc_spirv.cpp
Src/RenderTools/TextureViewer/: TextureViewer.cpp
